# Profolio-rust

./: .env  Cargo.toml  Readme.md  techs.txt
entity/: Cargo.toml
entity/src/: community.rs  community_user.rs  leagues.rs  mod.rs  order.rs  order_signature.rs  otp.rs  prelude.rs  remove_user.rs  review.rs  review_slot.rs  roadmap.rs  roadmap_user.rs  technology.rs  user.rs  user_technology.rs
migration/: Cargo.toml  db.sql
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20230623_113733_create_tech_table.rs  m20230623_114507_seed_tech_table.rs  m20230624_102249_create_user_tech_table.rs  m20230625_113658_create_community_table.rs  m20230625_131307_create_community_user_table.rs  m20230712_062519_create_league_table.rs  m20230712_063039_seed_league_table.rs  m20230712_131825_create_review_table.rs  m20230712_132508_create_community_chat.rs  m20230713_162119_create_slots.rs  m20230719_171213_create_roadmap.rs  m20230719_172144_create_roadmap_user.rs  m20230720_060928_seed_user_table.rs  m20230809_042320_create_order_table.rs  m20230809_045010_create_order_signature_table.rs  m20231003_085229_create_otp_table.rs  m20231008_031255_delete_user_data.rs  main.rs
src/: index.rs  main.rs
src/models/: community_model.rs  mod.rs  order_model.rs  review_model.rs  roadmap_model.rs  tech_model.rs  user_model.rs  users.rs
src/routers/: admin_routes.rs  auth_routes.rs  home_routes.rs  mod.rs  router.rs  user_routes.rs
src/routers/admin_routes/: home_handler.rs
src/routers/auth_routes/: auth_handler.rs
src/routers/home_routes/: home_handler.rs
src/routers/user_routes/: comunity_handler.rs  order_handler.rs  review_handler.rs  roadmap_handler.rs  user_handler.rs
src/utils/: api_error.rs  config.rs  constants.rs  crons.rs  guard.rs  jwt.rs  mailer.rs  misc.rs  mod.rs
