[package]
name = "profolio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["headers"] }
tokio = { version = "1.28.2",  features = ["full"]}
dotenv = "0.15.0"
rbs = { version = "4.3"}
rbatis = { version = "4.3"}
rbdc-pg={version="4.3"}
serde = { version = "1", features = ["derive"] }
