[package]
name = "profolio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "migration"]

[dependencies]
migration = { path = "migration" }
axum = { version = "0.6.18", features = ["headers"] }
tokio = { version = "1.28.2",  features = ["full"]}
dotenv = "0.15.0"
serde = { version = "1", features = ["derive"] }
sea-orm = { version = "0.11.3", features = ["sqlx-postgres", "runtime-tokio-rustls", "postgres-array", "sqlx"] }
serde_json = "1.0.97"
tower-cookies = "0.9.0"
tower-http = "0.4.0"
uuid = "1.3.4"
