[package]
name = "profolio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".","entity", "migration"]

[dependencies]
entity = { path = "entity"}
migration = { path = "migration" }
axum = { version = "0.6.18", features = ["headers"] }
tokio = { version = "1.28.2",  features = ["full"]}
dotenv = "0.15.0"
lazy_static = "1.4"
serde = { version = "1", features = ["derive"] }
sea-orm = { version = "0.11.3", features = ["sqlx-postgres", "runtime-tokio-rustls", "postgres-array", "sqlx"] }
serde_json = "1.0.97"
tower-cookies = "0.9.0"
tower-http = { version = "0.4.0", features = ["cors"] }
uuid = {version = "1.3.4", features= ["v4"]}
jsonwebtoken = "8.3.0"
chrono = "0.4.26"
rand = "0.8"
digest = "0.10.7"
sha2 = "0.10"
axum-error = "0.2.0"
tokio-cron-scheduler = "0.9.4"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
razorpay = "0.3.3"
lettre = "0.10"